@@ -801,48 +801,6 @@
 	</tr>
 	<tr bgcolor="#dababa">
 		<td nowrap>
-						1438354
-		</td>
-		<td>
-			<a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1438354&amp;group_id=599&amp;atid=100599">
-				pic libsdcc: distclean doesn&#039;t work
-			</a>
-		</td>
-		<td>
-							&nbsp;
-						2006-02-24 13:16
-		</td>
-		<td align="center">
-			5
-		</td>
-
-
-		<td>nobody</td>
-		<td>bernhardheld</td>
-	</tr>
-	<tr bgcolor="#dababa">
-		<td nowrap>
-						1438344
-		</td>
-		<td>
-			<a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1438344&amp;group_id=599&amp;atid=100599">
-				pic16 lib: clean doesn&#039;t work properly
-			</a>
-		</td>
-		<td>
-							&nbsp;
-						2006-02-24 12:51
-		</td>
-		<td align="center">
-			5
-		</td>
-
-
-		<td>nobody</td>
-		<td>bernhardheld</td>
-	</tr>
-	<tr bgcolor="#dababa">
-		<td nowrap>
 						1433917
 		</td>
 		<td>
